--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.3",
-    "@mui/material": "^5.15.3",
+    "@mui/material": "^5.15.7",
     "@phosphor-icons/react": "^2.0.15",
     "@prisma/client": "^5.9.1",
+    "axios": "^1.6.7",
     "date-fns": "^3.2.0",
     "eslint-config-next": "^14.0.4",
     "next": "^14.0.4",
@@ -27,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-stars": "^2.2.5",
     "react-toastify": "^9.1.3",
     "react-youtube": "^10.1.0",
