--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@mui/material": "^5.15.7",
     "@phosphor-icons/react": "^2.0.15",
     "@prisma/client": "^5.9.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "@typescript-eslint/typescript-estree": "^7.0.1",
     "axios": "^1.6.7",
     "date-fns": "^3.2.0",
-    "eslint-config-next": "^14.0.4",
-    "next": "^14.0.4",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
