--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.5.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -24,8 +25,9 @@
     "date-fns": "^3.3.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
+    "framer-motion": "^11.0.8",
     "next": "^14.1.0",
-    "next-auth": "^4.24.6",
+    "next-auth": "^5.0.0-beta.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
