--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
+    "daisyui": "^4.7.2",
     "postcss": "^8.4.33",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1"
