--- a/package.json
+++ b/package.json
@@ -10,38 +10,38 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.4.1",
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^5.16.5",
-    "@mui/material": "^5.16.5",
-    "@phosphor-icons/react": "^2.1.7",
-    "@prisma/client": "^5.17.0",
-    "axios": "^1.7.2",
-    "date-fns": "^3.6.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.2.5",
-    "framer-motion": "^11.3.17",
-    "next": "^14.2.5",
-    "next-auth": "^5.0.0-beta.15",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
+    "@auth/prisma-adapter": "^2.11.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@phosphor-icons/react": "^2.1.10",
+    "@prisma/client": "^6.19.0",
+    "@tailwindcss/postcss": "^4.1.17",
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
+    "eslint-config-next": "^16.0.7",
+    "next": "^16.0.7",
+    "next-auth": "5.0.0-beta.30",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-icons": "^5.5.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-stars": "^2.2.5",
     "react-toastify": "^9.1.3",
     "react-youtube": "^10.1.0",
-    "sweetalert2": "^11.12.3",
-    "swr": "^2.2.5"
+    "sweetalert2": "^11.26.4",
+    "swr": "^2.3.7"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "daisyui": "^4.12.10",
-    "postcss": "^8.4.40",
-    "prisma": "^5.17.0",
-    "tailwindcss": "^3.4.7"
+    "autoprefixer": "^10.4.22",
+    "daisyui": "^5.5.8",
+    "postcss": "^8.5.6",
+    "prisma": "^6.19.0",
+    "tailwindcss": "^4.1.17"
   }
 }
